--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "personalportfolio",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "http://kozaktar.github.io/portfolio/",
+  "private": true,
+  "homepage": "http://taraskozak.com/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
